force-app/main/default/objects/ssot__PatientMedicationDosage__dlm/fields/ssot__AdditionalInstructionText__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdditionalInstructionText__c</fullName>
    <label>Additional Instruction</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdditionalInstructionText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>