force-app/main/default/objects/ssot__PatientMedicationDosage__dlm/fields/ssot__DosageDefinitionText__c.field-meta.xml
<CustomField>
    <fullName>ssot__DosageDefinitionText__c</fullName>
    <label>Dosage Definition</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DosageDefinitionText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>