force-app/main/default/objects/ssot__PatientMedicationDosage__dlm/fields/ssot__DosageDenominatorUnitId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DosageDenominatorUnitId__c</fullName>
    <label>Dosage Denominator Unit of Measure</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DosageDenominatorUnitId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>