force-app/main/default/objects/ssot__PatientMedicationDosage__dlm/fields/ssot__DosageNumeratorNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__DosageNumeratorNumber__c</fullName>
    <label>Dosage Numerator</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DosageNumeratorNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>