force-app/main/default/objects/ssot__PatientMedicationDosage__dlm/fields/ssot__DosageQuantityDenominatorNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__DosageQuantityDenominatorNumber__c</fullName>
    <label>Dosage Quantity Denominator</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DosageQuantityDenominatorNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>