force-app/main/default/objects/ssot__PatientMedicationDosage__dlm/fields/ssot__DosageRateType__c.field-meta.xml
<CustomField>
    <fullName>ssot__DosageRateType__c</fullName>
    <label>Dosage Rate Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DosageRateType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>