force-app/main/default/objects/ssot__PatientMedicationDosage__dlm/fields/ssot__DosePrerequisiteId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DosePrerequisiteId__c</fullName>
    <label>Dose Prerequisite</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DosePrerequisiteId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>