force-app/main/default/objects/ssot__PatientMedicationDosage__dlm/fields/ssot__DoseQuantityUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>ssot__DoseQuantityUnitOfMeasure__c</fullName>
    <label>Dose Quantity Unit Of Measure</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DoseQuantityUnitOfMeasure</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>