force-app/main/default/objects/ssot__PatientMedicationDosage__dlm/fields/ssot__rel_1716721980982_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716721980982_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatientMedicationDosage_DosePrerequi_rel</label>
    <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
    <relationshipLabel>PatientMedicationDosage_DosePrerequi_rel</relationshipLabel>
    <relationshipName>rel_1716721980982_end</relationshipName>
    <type>Lookup</type>
</CustomField>