force-app/main/default/objects/ssot__PatientMedicationDosage__dlm/fields/ssot__rel_1716725349816_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716725349816_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatientMedicationDosage_ParentRefere_rel</label>
    <referenceTo>ssot__PatientMedicationRequest__dlm</referenceTo>
    <relationshipLabel>PatientMedicationDosage_ParentRefere_rel</relationshipLabel>
    <relationshipName>rel_1716725349816_end</relationshipName>
    <type>Lookup</type>
</CustomField>