force-app/main/default/objects/ssot__PatientMedicationDosage__dlm/fields/ssot__rel_1716725363968_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716725363968_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatientMedicationDosage_PatientId_ma_rel</label>
    <referenceTo>ssot__Patient__dlm</referenceTo>
    <relationshipLabel>PatientMedicationDosage_PatientId_ma_rel</relationshipLabel>
    <relationshipName>rel_1716725363968_end</relationshipName>
    <type>Lookup</type>
</CustomField>