force-app/main/default/objects/ssot__PatientMedicationDosage__dlm/fields/ssot__Site__c.field-meta.xml
<CustomField>
    <fullName>ssot__Site__c</fullName>
    <label>Site</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Site</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>